1.Fix About heading top spacing 2.Add three columns in skill block for wider screens

--- a/css/about.scss
+++ b/css/about.scss
@@ -4,9 +4,8 @@
 
 section#about {
   @include backgroundPic('../images/ocean3.jpg');
-  margin: 3px;
-  padding: 3px;
-  margin-top: 20px;
+  
+  width: 100%;
   grid-template: 75px 1fr/1fr;
 
   .aboutBlock {
@@ -45,6 +44,7 @@ section#about {
       p {
         color: var(--coolblack);
         font-weight: bold;
+        font-size: 16px;
       }
     }
   }
